[package]
name = "bevy-quinn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
quinn-proto = { version = "0.11", features = ["rustls", "platform-verifier"] }
quinn-udp = "0.5"
bytes = "1"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2.1.2"
rustls-platform-verifier = "0.3.1"
